--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 </script>
 </head>
 <body>
+<div class="theme-switch">
+  <div class="switch-container">
+    <span class="switch-label">🌙</span>
+    <label class="switch">
+      <input type="checkbox" onclick="toggleTheme()">
+      <span class="slider"></span>
+    </label>
+    <span class="switch-label">☀️</span>
+  </div>
+</div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
