--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#" aria-label="Retour à l'accueil">ProWork</a>
+            <a class="navbar-brand" href="index.html" aria-label="Retour à l'accueil">ProWork</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="#how-it-works">Comment ça marche</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#professionals">Professionnels</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonials">Avis</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#how-it-works">Comment ça marche</a></li>
+                    <li class="nav-item"><a class="nav-link" href="professionals.html">Professionnels</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testimonials.html">Avis</a></li>
                 </ul>
                 <div class="d-flex">
                     <a href="login.html" class="btn btn-outline-primary me-2" role="button">Connexion</a>
